--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,122 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+html {
+  background-color: white !important;
+}
+
+@font-face {
+  font-family: 'Arial-Rounded';
+  src: url('./assets/font/unicode.arialr.ttf');
+}
+
+h1,
+h2,
+h3,
+h4,
+p {
+  font-family: "Arial-Rounded", sans-serif !important;
+}
+
+.head-name {
+  font-size: 55px;
+  /* display: inline-block; */
+}
+
+.sub-name {
+  font-size: 25px;
+  /*  display: inline-block; */
+}
+
+.title-name {
+  font-size: 40px;
+  /*  display: inline-block; */
+  font-family: "Arial-Rounded", sans-serif !important;
+}
+
+.primary {
+  color: #474EAC;
+}
+
+.large {
+  font-size: 35px;
+}
+
+.secondary {
+  color: #FF98A2;
+}
+
+.tm-sidebar-left {
+  position: fixed;
+  top: 0px;
+  bottom: 0;
+  box-sizing: border-box;
+  width: 240px !important;
+  padding: 80px 40px 60px 30px;
+  border-right: 1px #e5e5e5 solid;
+  overflow: auto;
+  z-index: 1000;
+}
+
+@media only screen and (min-width: 640px) {
+  .page-content {
+    margin-left: 240px;
+  }
+
+  .head-name {
+    font-size: 80px;
+    display: inline-block;
+  }
+}
+
+.page-content-inner {
+  padding: 24px 24px 70px;
+}
+
+.uk-navbar.uk-navbar-container {
+  height: auto !important;
+}
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+.Cursor--blinking {
+  opacity: 1;
+  animation: blink 1s linear infinite;
+}
+
+html::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: #F5F5F5;
+}
+
+html::-webkit-scrollbar {
+  width: 12px;
+  background-color: #F5F5F5;
+}
+
+html::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #C9C9C9;
+}
+
+.md-input-icon>i.fas {
+  /* margin-top: 5px; */
+  font-size: 21px;
+}
+
+.logo-img {
+  display: inline-block;
+  padding: 10px;
 }
